--- a/knowledge-base.html
+++ b/knowledge-base.html
@@ -31,7 +31,7 @@
         background: rgba(255, 255, 255, 0.85);
         backdrop-filter: blur(10px);
         box-shadow: 0 3px 12px rgba(0, 0, 0, 0.05);
-        box-sizing: border-box; /* Agar padding tidak merusak lebar */
+        box-sizing: border-box;
       }
 
       .nav-links {
@@ -58,17 +58,17 @@
         color: #333;
       }
 
-      /* --- GRID CONTAINER --- */
+      /* GRID */
       .kb-container {
         width: 85%;
-        margin: 50px auto 100px auto; /* Margin bawah ditambah agar tidak kepotong footer */
+        margin: 50px auto 100px auto;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        gap: 30px; /* Jarak antar kotak */
-        align-items: start; /* Penting: Agar saat satu kotak memanjang, kotak sebelahnya tetap di atas */
+        gap: 30px;
+        align-items: start;
       }
 
-      /* --- KOTAK UTAMA (TOMBOL) --- */
+      /* BOX */
       .kb-box {
         background: #126e80;
         padding: 30px 20px;
@@ -78,15 +78,13 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
-        transition: all 0.4s ease; /* Transisi halus */
+        transition: all 0.4s ease;
         box-shadow: 0 4px 14px rgba(0, 0, 0, 0.1);
-        position: relative;
-        overflow: hidden; /* Menjaga isi tetap di dalam border radius */
+        overflow: hidden;
       }
 
       .kb-box:hover {
-        transform: translateY(-5px); /* Sedikit naik saat hover */
+        transform: translateY(-5px);
         background: #126e80;
         box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
       }
@@ -97,29 +95,25 @@
         margin-top: 15px;
         display: block;
 
-        /* Animasi seperti .kb-desc */
         max-height: 0;
         opacity: 0;
         overflow: hidden;
         transition: all 0.9s ease;
       }
       .kb-box:hover .kb-img {
-        max-height: 400px; /* bebas lo atur */
+        max-height: 400px;
         opacity: 1;
       }
 
-      /* --- JUDUL AKTIVITAS --- */
       .kb-title-text {
         font-size: 24px;
         font-weight: 700;
         margin-bottom: 0;
-        transition: 0.3s;
         text-align: center;
       }
 
-      /* --- DESKRIPSI (KOTAK PUTIH) --- */
       .kb-desc {
-        background: #ffffff; /* Kotak Putih */
+        background: #ffffff;
         color: #555;
         font-size: 14px;
         font-weight: 400;
@@ -127,23 +121,67 @@
         text-align: center;
         border-radius: 15px;
         width: 100%;
-
-        /* Properti Animasi Sembunyi */
         max-height: 0;
         opacity: 0;
         margin-top: 0;
-        padding: 0 15px; /* Padding kiri kanan saja */
+        padding: 0 15px;
         overflow: hidden;
-        transition: all 0.5s ease; /* Durasi animasi turun */
+        transition: all 0.5s ease;
         box-sizing: border-box;
       }
 
-      /* --- EFEK SAAT HOVER --- */
       .kb-box:hover .kb-desc {
-        max-height: 300px; /* Batas tinggi maksimal saat terbuka (bisa disesuaikan) */
+        max-height: 300px;
         opacity: 1;
-        margin-top: 20px; /* Jarak antara judul dan kotak putih */
-        padding: 20px 15px; /* Padding dalam kotak putih */
+        margin-top: 20px;
+        padding: 20px 15px;
+      }
+
+      /* TABEL */
+      .table-container {
+        width: 90%;
+        margin: 60px auto;
+        background: #ffffff;
+        padding: 30px;
+        border-radius: 20px;
+        box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+        overflow-x: auto;
+      }
+
+      .clean-table {
+        width: 100%;
+        border-collapse: collapse;
+        font-size: 14px;
+        color: #333;
+      }
+
+      .clean-table th {
+        background: #126e80;
+        color: white;
+        font-weight: 600;
+        padding: 12px;
+        text-align: center;
+        border-bottom: 2px solid #0f5c6a;
+      }
+
+      .clean-table td {
+        padding: 10px 12px;
+        border-bottom: 1px solid #ddd;
+        text-align: center;
+      }
+
+      .clean-table tr:nth-child(even) {
+        background: #f5fbfc;
+      }
+
+      .clean-table tr:hover {
+        background: #e7f5f7;
+      }
+
+      @media (max-width: 900px) {
+        .kb-container {
+          grid-template-columns: 1fr;
+        }
       }
 
       .bottom-hill {
@@ -155,14 +193,9 @@
         bottom: 0;
         z-index: -1;
       }
-
-      @media (max-width: 900px) {
-        .kb-container {
-          grid-template-columns: 1fr;
-        }
-      }
     </style>
   </head>
+
   <body>
     <div class="navbar">
       <div class="nav-links">
@@ -173,6 +206,7 @@
 
     <h1 class="title">AKTIVITAS TERMINAL</h1>
 
+    <!-- GRID BOXES -->
     <div class="kb-container">
       <a href="aktivitas1.html" class="kb-box">
         <div class="kb-title-text">Aktivitas Terminal 1</div>
@@ -209,6 +243,396 @@
         <div class="kb-desc">Yard Talker</div>
         <img src="aset/Yard Talker.jpg" class="kb-img" />
       </a>
+    </div>
+
+    <!-- TABEL BESAR -->
+    <div class="table-container">
+      <h2
+        style="
+          text-align: center;
+          margin-bottom: 25px;
+          font-weight: 700;
+          color: #126e80;
+        "
+      >
+        Pattern Recognition + Risiko
+      </h2>
+
+      <table class="clean-table">
+        <thead>
+          <tr>
+            <th>AT Code</th>
+            <th>Aktivitas Terminal</th>
+            <th>AA/AP Code</th>
+            <th>Aktivitas Admin/Pemeriksaan</th>
+            <th>Risk Code</th>
+            <th>Risk</th>
+            <th>Cause Code</th>
+            <th>Cause</th>
+            <th>PM Code</th>
+            <th>Preventive Measure</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>AT 1</td>
+            <td>Berth Allocation (BA)</td>
+            <td>AA 1</td>
+            <td>Menerbitkan Berth Plan terkonfirmasi</td>
+            <td>R1</td>
+            <td>Ketidakakuratan jadwal & posisi sandar</td>
+            <td>C1</td>
+            <td>ETA/ETD kapal tidak akurat</td>
+            <td>PM1</td>
+            <td>Just-in-Time Port Call + update ETA/ETD</td>
+          </tr>
+
+          <tr>
+            <td>AT 1</td>
+            <td>Berth Allocation (BA)</td>
+            <td>AA 1</td>
+            <td>Menerbitkan Berth Plan terkonfirmasi</td>
+            <td>R2</td>
+            <td>Ketidaksesuaian alokasi crane</td>
+            <td>C2</td>
+            <td>Status crane tidak real-time</td>
+            <td>PM2</td>
+            <td>Integrasi CMMS + condition monitoring</td>
+          </tr>
+
+          <tr>
+            <td>AT 1</td>
+            <td>Berth Allocation (BA)</td>
+            <td>AP 1</td>
+            <td>Verifikasi Vessel Schedule & Alokasi</td>
+            <td>R1</td>
+            <td>Berth conflict</td>
+            <td>C1</td>
+            <td>ETA/ETB tidak sinkron</td>
+            <td>PM1</td>
+            <td>Sinkronisasi otomatis ETA/ETB</td>
+          </tr>
+
+          <tr>
+            <td>AT 1</td>
+            <td>Berth Allocation (BA)</td>
+            <td>AP 1</td>
+            <td>Verifikasi Vessel Schedule</td>
+            <td>R1</td>
+            <td>Berth conflict</td>
+            <td>C2</td>
+            <td>Durasi operasi kapal meleset</td>
+            <td>PM2</td>
+            <td>Buffer time antar kapal</td>
+          </tr>
+
+          <tr>
+            <td>AT 1</td>
+            <td>Berth Allocation (BA)</td>
+            <td>AP 1</td>
+            <td>Verifikasi Vessel Schedule</td>
+            <td>R2</td>
+            <td>Ketidakcocokan kapal–dermaga</td>
+            <td>C3</td>
+            <td>Data teknis kapal tidak lengkap</td>
+            <td>PM3</td>
+            <td>Ship particulars checklist + hard validation</td>
+          </tr>
+
+          <tr>
+            <td>AT 1</td>
+            <td>Berth Allocation (BA)</td>
+            <td>AP 1</td>
+            <td>Verifikasi Vessel Schedule</td>
+            <td>R2</td>
+            <td>Ketidakcocokan kapal–dermaga</td>
+            <td>C4</td>
+            <td>Informasi dermaga tidak akurat</td>
+            <td>PM4</td>
+            <td>Berth capacity matrix + crane status</td>
+          </tr>
+
+          <!-- AT 2 -->
+          <tr>
+            <td>AT 2</td>
+            <td>Manning & Deployment</td>
+            <td>AA 2</td>
+            <td>Menyusun jadwal manpower</td>
+            <td>R3</td>
+            <td>Kekurangan tenaga kerja</td>
+            <td>C5</td>
+            <td>Data kehadiran tidak akurat</td>
+            <td>PM5</td>
+            <td>Integrasi attendance real-time</td>
+          </tr>
+
+          <tr>
+            <td>AT 2</td>
+            <td>Manning & Deployment</td>
+            <td>AA 2</td>
+            <td>Menyusun jadwal manpower</td>
+            <td>R4</td>
+            <td>Overwork / kelebihan beban</td>
+            <td>C6</td>
+            <td>Distribusi manpower tidak seimbang</td>
+            <td>PM6</td>
+            <td>Workload balancing + sistem rekomendasi</td>
+          </tr>
+
+          <tr>
+            <td>AT 2</td>
+            <td>Manning & Deployment</td>
+            <td>AP 2</td>
+            <td>Verifikasi kehadiran & kualifikasi</td>
+            <td>R3</td>
+            <td>Tenaga tidak kompeten masuk shift</td>
+            <td>C7</td>
+            <td>Kualifikasi skill tidak diverifikasi</td>
+            <td>PM7</td>
+            <td>Skill-based assignment</td>
+          </tr>
+
+          <tr>
+            <td>AT 2</td>
+            <td>Manning & Deployment</td>
+            <td>AP 2</td>
+            <td>Verifikasi kehadiran & kualifikasi</td>
+            <td>R4</td>
+            <td>Overload tenaga kerja</td>
+            <td>C8</td>
+            <td>Penggantian mendadak tanpa kontrol</td>
+            <td>PM8</td>
+            <td>Otomatisasi approval penggantian</td>
+          </tr>
+
+          <!-- AT 3 -->
+          <tr>
+            <td>AT 3</td>
+            <td>Ship Planner</td>
+            <td>AA 3</td>
+            <td>Menyusun Rencana Operasi Kapal</td>
+            <td>R5</td>
+            <td>Mis-stow / salah penataan</td>
+            <td>C9</td>
+            <td>Data stowage tidak lengkap</td>
+            <td>PM9</td>
+            <td>Data validation + pre-check stowage</td>
+          </tr>
+
+          <tr>
+            <td>AT 3</td>
+            <td>Ship Planner</td>
+            <td>AA 3</td>
+            <td>Menyusun Rencana Operasi Kapal</td>
+            <td>R6</td>
+            <td>Crane conflict</td>
+            <td>C10</td>
+            <td>Perhitungan jangkauan crane salah</td>
+            <td>PM10</td>
+            <td>Cranespace simulation</td>
+          </tr>
+
+          <tr>
+            <td>AT 3</td>
+            <td>Ship Planner</td>
+            <td>AP 3</td>
+            <td>Verifikasi rencana operasi</td>
+            <td>R5</td>
+            <td>Mis-stow</td>
+            <td>C11</td>
+            <td>Mismatch stowage plan vs manifest</td>
+            <td>PM11</td>
+            <td>Cross-check otomatis TOS–Manifest</td>
+          </tr>
+
+          <tr>
+            <td>AT 3</td>
+            <td>Ship Planner</td>
+            <td>AP 3</td>
+            <td>Verifikasi rencana operasi</td>
+            <td>R6</td>
+            <td>Crane conflict</td>
+            <td>C12</td>
+            <td>Crane spacing tidak sesuai</td>
+            <td>PM12</td>
+            <td>Auto-spacing & safety margin</td>
+          </tr>
+
+          <!-- AT 4 -->
+          <tr>
+            <td>AT 4</td>
+            <td>Yard Planner</td>
+            <td>AA 4</td>
+            <td>Menyusun yard plan</td>
+            <td>R7</td>
+            <td>Penumpukan tidak efisien</td>
+            <td>C13</td>
+            <td>Yard occupancy tidak real-time</td>
+            <td>PM13</td>
+            <td>Yard monitoring + occupancy mapping</td>
+          </tr>
+
+          <tr>
+            <td>AT 4</td>
+            <td>Yard Planner</td>
+            <td>AA 4</td>
+            <td>Menyusun yard plan</td>
+            <td>R8</td>
+            <td>Overstay / blocking</td>
+            <td>C14</td>
+            <td>Perkiraan dwell time salah</td>
+            <td>PM14</td>
+            <td>Dwell time prediction</td>
+          </tr>
+
+          <tr>
+            <td>AT 4</td>
+            <td>Yard Planner</td>
+            <td>AP 4</td>
+            <td>Verifikasi yard plan</td>
+            <td>R7</td>
+            <td>Kepadatan yard</td>
+            <td>C15</td>
+            <td>Data block capacity salah</td>
+            <td>PM15</td>
+            <td>Auto-capacity check</td>
+          </tr>
+
+          <tr>
+            <td>AT 4</td>
+            <td>Yard Planner</td>
+            <td>AP 4</td>
+            <td>Verifikasi yard plan</td>
+            <td>R8</td>
+            <td>Blocking</td>
+            <td>C16</td>
+            <td>Barang prioritas bercampur</td>
+            <td>PM16</td>
+            <td>Priority slot rules</td>
+          </tr>
+
+          <!-- AT 5 -->
+          <tr>
+            <td>AT 5</td>
+            <td>Ship Talker</td>
+            <td>AA 5</td>
+            <td>Koordinasi operasional kapal</td>
+            <td>R9</td>
+            <td>Miss-communication</td>
+            <td>C17</td>
+            <td>Informasi tidak standar</td>
+            <td>PM17</td>
+            <td>Standard message template</td>
+          </tr>
+
+          <tr>
+            <td>AT 5</td>
+            <td>Ship Talker</td>
+            <td>AA 5</td>
+            <td>Koordinasi operasional kapal</td>
+            <td>R10</td>
+            <td>Keterlambatan instruksi</td>
+            <td>C18</td>
+            <td>Response time lambat</td>
+            <td>PM18</td>
+            <td>Auto-notification system</td>
+          </tr>
+
+          <tr>
+            <td>AT 5</td>
+            <td>Ship Talker</td>
+            <td>AP 5</td>
+            <td>Verifikasi instruksi kapal</td>
+            <td>R9</td>
+            <td>Instruksi tidak jelas</td>
+            <td>C19</td>
+            <td>Laporan manual rawan salah</td>
+            <td>PM19</td>
+            <td>Digital reporting form</td>
+          </tr>
+
+          <tr>
+            <td>AT 5</td>
+            <td>Ship Talker</td>
+            <td>AP 5</td>
+            <td>Verifikasi instruksi kapal</td>
+            <td>R10</td>
+            <td>Keterlambatan info</td>
+            <td>C20</td>
+            <
+            <td>Kapal tidak update status</td>
+            <td>PM20</td>
+            <td>Mandatory status update</td>
+          </tr>
+
+          <tr>
+            <td>AT 5</td>
+            <td>Ship Talker</td>
+            <td>AP 5</td>
+            <td>Verifikasi instruksi kapal</td>
+            <td>R10</td>
+            <td>Keterlambatan info</td>
+            <td>C21</td>
+            <td>Perbedaan format pelaporan</td>
+            <td>PM21</td>
+            <td>Standardized code & terminology</td>
+          </tr>
+
+          <!-- AT 6 -->
+          <tr>
+            <td>AT 6</td>
+            <td>Yard Talker</td>
+            <td>AA 6</td>
+            <td>Koordinasi operasional yard</td>
+            <td>R11</td>
+            <td>Instruksi salah</td>
+            <td>C22</td>
+            <td>Data block salah</td>
+            <td>PM22</td>
+            <td>Auto-verification yard block</td>
+          </tr>
+
+          <tr>
+            <td>AT 6</td>
+            <td>Yard Talker</td>
+            <td>AA 6</td>
+            <td>Koordinasi yard</td>
+            <td>R12</td>
+            <td>Keterlambatan instruksi</td>
+            <td>C23</td>
+            <td>Keterlambatan update posisi</td>
+            <td>PM23</td>
+            <td>Live position system</td>
+          </tr>
+
+          <tr>
+            <td>AT 6</td>
+            <td>Yard Talker</td>
+            <td>AP 6</td>
+            <td>Verifikasi pergerakan yard</td>
+            <td>R11</td>
+            <td>Instruksi salah</td>
+            <td>C24</td>
+            <td>Operator salah baca info</td>
+            <td>PM24</td>
+            <td>Dashboard info + highlight</td>
+          </tr>
+
+          <tr>
+            <td>AT 6</td>
+            <td>Yard Talker</td>
+            <td>AP 6</td>
+            <td>Verifikasi pergerakan yard</td>
+            <td>R12</td>
+            <td>Keterlambatan instruksi</td>
+            <td>C25</td>
+            <td>Komunikasi manual</td>
+            <td>PM25</td>
+            <td>Instant messaging terintegrasi TOS</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
     <div class="bottom-hill"></div>
