--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       @media (max-width: 900px) {
         .content {
           flex-direction: column;
-          text-align: center;
+          text-align: justify;
         }
         .image-box {
           margin: 0 auto;
